fixes for render
